# document-processor

./: .gitignore  README.md  pyproject.toml
docs/: api-reference.md  removed-legacy-edit-api.md  usage-guide.md
src/document_processor/: __init__.py  annotations.py  api.py  api_types.py  builder.py  edit_engine.py  html_exporter.py  logging_config.py  models.py  style_types.py
src/document_processor/core/: document_ir_parser.py  style_extractor.py
src/document_processor/pdf/: README.md  __init__.py  annotations.py  config.py  local_outputs.py  meta.py  pipeline.py
src/document_processor/pdf/diagnostics/: __init__.py  table_warnings.py
src/document_processor/pdf/enhancement/: __init__.py  border_inference.py  enrichment.py  image_fallback.py
src/document_processor/pdf/odl/: adapter.py  runner.py  table_reconstruct.py  table_reconstruct_geometry.py  table_reconstruct_rebuild.py  table_reconstruct_text.py
src/document_processor/pdf/parsing/: probe.py  triage.py
src/document_processor/pdf/preview/: analyze.py  normalize.py
tests/: kr_demo.ipynb  manual_test_all.py  manual_test_one.py  test_document_ir.py  test_editor_api.py  test_html_exporter.py  test_pdf_annotations.py  test_pdf_enrichment.py  test_pdf_llm_annotation_demo.py  test_pdf_odl_table_reconstruct.py  test_pdf_pipeline.py  test_pdf_preview.py  test_pdf_preview_module_api.py  test_pdf_table_warnings.py  test_style_extractor.py
