[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-processor"
version = "0.1.0"
description = "Batteries-included structural document IR parser for HWP, HWPX, DOCX, and PDF."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jpype1>=1.6.0",
    "pydantic>=2.12.0",
    "pypdf>=6.2.0,<7.0.0",
    "pypdfium2>=5.6.0,<6.0.0",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
viz = [
    "erdantic>=1.0.0",
]

[project.scripts]
document-processor-diagram = "document_processor.diagram:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/document_processor"]
artifacts = [
    "src/document_processor/core/vendor/**/*.jar",
    # PDF parsing depends on the vendored ODL CLI JAR at runtime.
    "src/document_processor/pdf/odl/vendor/**/*.jar",
]
